--- a/weather.html
+++ b/weather.html
@@ -1,29 +1,93 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>미세먼지 정보</title>
-</head>
-<body>
-    <h1>현재 미세먼지 상태</h1>
-    <div id="airQuality"></div>
+<script type="text/javascript">
+  $(document).ready(function(){
+      if (navigator.permissions && navigator.permissions.query) {
+          navigator.permissions.query({name: 'geolocation'}).then(function (result) {
+              if (result.state == 'granted') {
+                  function success(position) {
+                      console.log("1");
+                      var geocoder = new kakao.maps.services.Geocoder();
+                      var lat = position.coords.latitude, // 위도
+                          lon = position.coords.longitude; // 경도
+                      var callback = function (result, status) {
+                          if (status === kakao.maps.services.Status.OK) {
+                              var my_area = result[0]['address']['region_1depth_name'];
+                              if (my_area == '경기') {
+                                  my_area = '경기남부';
+                              }
+                              get_area(my_area);
+                          }
+                      }
+                      var coord = new kakao.maps.LatLng(lat, lon);
+                      geocoder.coord2Address(coord.getLng(), coord.getLat(), callback);
 
-    <script>
-        // OpenAQ API에서 미세먼지 정보를 가져오는 함수
-        async function fetchAirQuality() {
-            try {
-                const response = await fetch('https://api.openaq.org/v1/latest?country=KR&parameter=pm25');
-                const data = await response.json();
-                const pm25 = data.results[0].measurements[0].value;
-                document.getElementById('airQuality').innerText = `현재 미세먼지 농도: ${pm25} μg/m³`;
-            } catch (error) {
-                console.error('미세먼지 정보를 가져오는 중 오류가 발생했습니다:', error);
-            }
-        }
+                  }
+                  navigator.geolocation.getCurrentPosition(success);
+              } else{
+                  get_area('경기남부');
+              }
+          });
+      }
 
-        // 페이지가 로드될 때 미세먼지 정보를 가져옴
-        window.onload = fetchAirQuality;
-    </script>
-</body>
-</html>
+  });
+  function get_area(area){
+      var my_area = area;
+      $.ajax({
+          type: "POST",
+          url : "../main_dust.php",
+          data: {myarea :my_area},
+          dataType: 'json',
+          success: function(json) {
+          $(".my_area").text(my_area);
+          $("#status").attr('class',json[1]);
+          $(".dust_new_icon").attr('src','/img/dust/dust_new_icon_'+json[1]+'.png')
+          $("#ozone").attr('class',json[2]);
+          $("#ozone_img").attr('src','/img/dust/dust_new_icon_'+json[2]+'.png')
+          if(json[1] =='good'){
+              $("#status").text('좋음');
+          }
+          if(json[1] =='normal'){
+              $("#status").text('보통');
+          }
+          if(json[1] =='bad'){
+              $("#status").text('나쁨');
+          }
+          if(json[1] =='verybad'){
+              $("#status").text('아주나쁨');
+          }
+          if(json[2] =='good'){
+              $("#ozone").text('좋음');
+          }
+          if(json[2] =='normal'){
+              $("#ozone").text('보통');
+          }
+          if(json[2] =='bad'){
+              $("#ozone").text('나쁨');
+          }
+          if(json[2] =='verybad'){
+              $("#ozone").text('아주나쁨');
+          }
+
+          }
+      });
+  }
+</script>
+<div id="dust" class="dust_new">
+  <h1>날씨예보</h1>
+  <div class="dust_new_box">
+      <h2 class="my_area">지역</h2>
+      <div class="dust_new_list clearfix">
+          <div class="dust_new_name">
+              <p class="tit">미세먼지</p>
+              <p class="" id ="status"></p>
+          </div>
+          <img src="" class="dust_new_icon" alt=""/>
+      </div>
+      <div class="dust_new_list clearfix">
+          <div class="dust_new_name">
+              <p class="tit">오존</p>
+              <p class="" id="ozone"></p>
+          </div>
+          <img src="" class="dust_new_icon" id="ozone_img" alt=""/>
+      </div>
+  </div>
+</div>                   
