--- a/index.html
+++ b/index.html
@@ -560,22 +560,45 @@
           <div class="bookmark-wrap">
             <div class="bookmark-title">
               <h2>교육계획안</h2>
-              <span class="setting">편집</span>
             </div>
             <div class="bookmark-all">
               <ul class="bookmark-grid-gap">
                 <li class="bookmark-top">
                   <div class="plus_btn_wrap">
-                    <span class="plus_btn"><a href="#"></a></span>
-                    <span class="plus_btn"><a href="#"></a></span>
-                    <span class="plus_btn"><a href="#" ></a></span>
+                      <span class="delete plus_btn">
+                        <a href="#">
+                          <img src="img/bookmark/plus.svg" alt="바로가기 추가">
+                        </a>
+                      </span>
+                      <span class="delete plus_btn">
+                        <a href="#">
+                          <img src="img/bookmark/plus.svg" alt="바로가기 추가">
+                        </a>
+                      </span>
+                      <span class="delete plus_btn">
+                        <a href="#">
+                          <img src="img/bookmark/plus.svg" alt="바로가기 추가">
+                        </a>
+                      </span>
                   </div>
                 </li>
                 <li class="bookmark-bottom">
                   <div class="plus_btn_wrap">
-                    <span class="plus_btn"><a href="#"></a></span>
-                    <span class="plus_btn"><a href="#"></a></span>
-                    <span class="plus_btn"><a href="#" ></a></span>
+                      <span class="delete plus_btn">
+                        <a href="#">
+                          <img src="img/bookmark/plus.svg" alt="바로가기 추가">
+                        </a>
+                      </span>
+                      <span class="delete plus_btn">
+                        <a href="#">
+                          <img src="img/bookmark/plus.svg" alt="바로가기 추가">
+                        </a>
+                      </span>
+                      <span class="delete plus_btn">
+                        <a href="#">
+                          <img src="img/bookmark/plus.svg" alt="바로가기 추가">
+                        </a>
+                      </span>
                   </div>
                 </li>
               </ul>
@@ -1104,67 +1127,8 @@
       
     </footer>
   </div>
-<script>
-document.addEventListener("DOMContentLoaded", function() {
-    var clickedBtn = null; // 클릭된 버튼을 추적하는 변수
 
-    // Plus 버튼 클릭 시 메뉴 보이기
-    var plusBtns = document.querySelectorAll('.plus_btn');
-    
-    //부모에게 .plus_btn 주는걸로 변경했더니 해결!
-    plusBtns.forEach(function(btn, index) {
-        btn.addEventListener('click', function(e) {
-            document.getElementById('id_my_menu_set').style.display = 'block';
-            clickedBtn = btn; // 클릭된 버튼 업데이트
-            clickedBtn.classList.add('hidden'); // 클릭된 버튼 숨기기
-            clickedBtn.setAttribute('data-index', index.toString()); // 클릭된 버튼의 인덱스 설정
-            e.preventDefault();
-        });
-    });
-
-    // 메뉴 클릭 시 메뉴 숨기고 버튼 내용 업데이트하기
-    var menuItems = document.querySelectorAll('#id_my_menu_set li a');
-    menuItems.forEach(function(item) {
-        item.addEventListener('click', function() {
-            var menuName = this.innerText;
-            document.getElementById('id_my_menu_set').style.display = 'none';
-            if (clickedBtn && !clickedBtn.innerText.trim()) {
-                clickedBtn.innerText = menuName;
-                // 로컬 스토리지에 저장하기
-                localStorage.setItem('plus_btn_' + clickedBtn.getAttribute('data-index'), menuName);
-                clickedBtn.classList.add('hidden'); // 클릭된 버튼 숨기기
-            }
-        });
-    });
-
-    // 페이지 로드 시 로컬 스토리지에서 저장된 메뉴를 불러와 바로가기 버튼에 적용하기
-    for (let i = 0; i < plusBtns.length; i++) {
-        const menu = localStorage.getItem(`plus_btn_${i}`);
-        if (menu) {
-            plusBtns[i].innerText = menu;
-            plusBtns[i].classList.add('hidden'); // 로컬 스토리지에 해당 데이터가 있으면 플러스 버튼 숨기기
-        }
-    }
-
-    // localStorage에서 데이터를 지웠을 때 플러스 버튼이 다시 나타나도록 함
-    window.addEventListener('storage', function(e) {
-        if (e.key.startsWith('plus_btn_')) {
-            const index = e.key.split('_')[1]; // 인덱스 추출
-            const btn = document.querySelector(`.plus_btn[data-index="${index}"]`);
-            if (!localStorage.getItem(e.key)) {
-                btn.classList.remove('hidden'); // localStorage에서 해당 데이터를 지웠을 때 플러스 버튼 나타내기
-            }
-        }
-    });
-});
-
-
-
-</script>
   <script src="js/swiper.js"></script>
-  <!-- <script src="js/bookmark.js"></script> -->
+  <script src="js/bookmark.js"></script>
 </body>
 </html>
-
-var none = document.querySelectorAll('#bookmark .bookmark-bottom > div > span > a')
-none.classList.add('none');
