--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div class="search-box-result">
             <div class="container">
               <button class="btn-close">닫기버튼</button>
-              <div class="Recommended-search">
+              <div class="recommended-search">
                 <h2>추천 검색어</h2>
                 <ul>
                   <li>
