--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>키드키즈</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <link rel="stylesheet" href="css/style.css">
@@ -493,7 +493,7 @@
       <ul>
         <li>
           <a href="#">
-            <span><img src="img/teacher-life/design aditor.png" alt="디자인에디터"></span>
+            <span><img src="img/teacher-life/design-aditor.png" alt="디자인에디터"></span>
             <span class="teacher-title">디자인에디터</span>
           </a>
         </li>
@@ -541,7 +541,9 @@
         </li>
       </ul>
     </section>
-    <section id="ad1"></section>
+    <div id="ad1">
+      <!--<h2>광고</h2>-->
+    </div>
     <section id="bookmark">
       <!-- 자주가는 메뉴 팝업 -->
       <div id="id_my_menu_set" class="my_menu_set">
@@ -549,7 +551,7 @@
           <h3>자주가는 메뉴</h3>
             <div class="set">
               <a href="#">
-                <img src="/img/main2014/my_menu_set_close.png" />
+                <img src="/img/bookmark/set-close.png" alt="닫기버튼">
               </a>
             </div>
         </div>
@@ -628,7 +630,7 @@
           </div>
           <div class="bookmark-wrap">
             <div class="bookmark-title">
-              <h2>교육계획안</h2>
+              <h2>교육계획안 바로가기</h2>
             </div>
             <div class="bookmark-all">
               <ul class="bookmark-grid-gap">
@@ -676,7 +678,7 @@
       </div>
       <div class="bookmark2 bookPos">
         <div class="blobs">
-          <svg width="372" height="374" viewBox="0 0 372 374" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg width="371" height="374" viewBox="0 0 371 374" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" clip-rule="evenodd" d="M264.01 42.3768C306.253 68.4367 352.47 95.1926 365.669 143.372C379.771 194.847 365.827 252.152 333.228 295.037C301.866 336.294 250.235 351.082 199.866 361.489C148.495 372.104 90.7349 385.143 49.2751 353.706C8.6167 322.877 9.08102 263.99 3.74417 212.781C-1.06649 166.62 -4.26264 118.97 20.6955 79.4723C46.5714 38.5223 89.3287 9.42811 136.815 2.18834C182.786 -4.82033 224.721 18.1389 264.01 42.3768Z" fill="#B8DAFA"/>
           </svg>
         </div>
@@ -703,7 +705,7 @@
       </div>
       <div class="bookmark3 bookPos">
         <div class="blobs">
-          <svg width="372" height="374" viewBox="0 0 372 374" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg width="371" height="374" viewBox="0 0 371 374" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path fill-rule="evenodd" clip-rule="evenodd" d="M263.9 41.9647C306.142 68.0246 352.36 94.7805 365.559 142.96C379.661 194.435 365.717 251.74 333.117 294.625C301.756 335.882 250.124 350.67 199.755 361.077C148.384 371.691 90.6245 384.731 49.1647 353.294C8.50635 322.465 8.97067 263.578 3.63382 212.369C-1.17684 166.208 -4.373 118.558 20.5851 79.0602C46.461 38.1102 89.2184 9.01599 136.705 1.77623C182.676 -5.23244 224.611 17.7268 263.9 41.9647Z" fill="#F5E8B9"/>
           </svg>
         </div>
@@ -874,7 +876,7 @@
       </div> -->
       
     </section>
-    <section id="ad2">
+    <div id="ad2">
       <div>
         <a href="#">
           <img src="img/ad/어린이날.png" alt="어린이날 선물">
@@ -885,7 +887,7 @@
           <img src="img/ad/설렘가득.png" alt="설렘가득">
         </a>
       </div>
-    </section>
+    </div>
     <section id="shopping-contentArea">
         <div class="hot-keyword">
           <h2>HOT 키워드</h2>
@@ -1000,27 +1002,33 @@
           </div>
         </div>
         <div class="benefit-right">
-          <div class="benefit-box">
-            <div class="benefit-product"><img src="img/benefit/benefit1.png" alt="2024 신학기 교사 필수템! 코튼 원피스 앞치마"></div>
-            <div class="benefit-product-title">
-              <span class="top-title">2024 신학기 교사 필수템!</span>
-              <span class="bottom-title">코튼 원피스 앞치마</span>
+          <a href="#">
+            <div class="benefit-box">
+              <div class="benefit-product"><img src="img/benefit/benefit1.png" alt="2024 신학기 교사 필수템! 코튼 원피스 앞치마"></div>
+              <div class="benefit-product-title">
+                <span class="top-title">2024 신학기 교사 필수템!</span>
+                <span class="bottom-title">코튼 원피스 앞치마</span>
+              </div>
             </div>
-          </div>
-          <div class="benefit-box">
-            <div class="benefit-product"><img src="img/benefit/benefit2.png" alt="백팩과 캐리어가 하나로! 신학기 입학 선물"></div>
-            <div class="benefit-product-title">
-              <span class="top-title">백팩과 캐리어가 하나로!</span>
-              <span class="bottom-title">신학기 입학 선물</span>
+          </a>
+          <a href="#">
+            <div class="benefit-box">
+              <div class="benefit-product"><img src="img/benefit/benefit2.png" alt="백팩과 캐리어가 하나로! 신학기 입학 선물"></div>
+              <div class="benefit-product-title">
+                <span class="top-title">백팩과 캐리어가 하나로!</span>
+                <span class="bottom-title">신학기 입학 선물</span>
+              </div>
             </div>
-          </div>
-          <div class="benefit-box">
-            <div class="benefit-product"><img src="img/benefit/benefit3.png" alt="컬러풀한 여행을 위한 잇템! 레디백 미니 캐리어"></div>
-            <div class="benefit-product-title">
-              <span class="top-title">컬러풀한 여행을 위한 잇템!</span>
-              <span class="bottom-title">레디백 미니 캐리어</span>
+          </a>
+          <a href="#">
+            <div class="benefit-box">
+              <div class="benefit-product"><img src="img/benefit/benefit3.png" alt="컬러풀한 여행을 위한 잇템! 레디백 미니 캐리어"></div>
+              <div class="benefit-product-title">
+                <span class="top-title">컬러풀한 여행을 위한 잇템!</span>
+                <span class="bottom-title">레디백 미니 캐리어</span>
+              </div>
             </div>
-          </div>
+          </a>
         </div>
       </div>
     </section>
@@ -1033,33 +1041,39 @@
             <button class="more kraft-more">크래프트 더 보러가기</button>
           </div>
           <div class="kraft-box-wrap">
-            <div class="kraft-box">
-              <div class="kraft-content">
-                <img src="img/spcialDay/kraft1.png" alt="졸업식·수료식 카드 만들기">
+            <a href="#">
+              <div class="kraft-box">
+                <div class="kraft-content">
+                  <img src="img/spcialDay/kraft1.png" alt="졸업식·수료식 카드 만들기">
+                </div>
+                <div class="kraft-content-title">
+                  <span>크래프트</span>
+                  <span>졸업식·수료식 카드 만들기</span>
+                </div>
               </div>
-              <div class="kraft-content-title">
-                <span>크래프트</span>
-                <span>졸업식·수료식 카드 만들기</span>
+            </a>
+            <a href="#">
+              <div class="kraft-box">
+                <div class="kraft-content">
+                  <img src="img/spcialDay/kraft2.png" alt="추억 담는 카메라 만들기">
+                </div>
+                <div class="kraft-content-title">
+                  <span>크래프트</span>
+                  <span>추억 담는 카메라 만들기</span>
+                </div>
               </div>
-            </div>
-            <div class="kraft-box">
-              <div class="kraft-content">
-                <img src="img/spcialDay/kraft2.png" alt="추억 담는 카메라 만들기">
+            </a>
+            <a href="#">
+              <div class="kraft-box">
+                <div class="kraft-content">
+                  <img src="img/spcialDay/kraft3.png" alt="졸업 사탕 트로피 만들기">
+                </div>
+                <div class="kraft-content-title">
+                  <span>크래프트</span>
+                  <span>졸업 사탕 트로피 만들기</span>
+                </div>
               </div>
-              <div class="kraft-content-title">
-                <span>크래프트</span>
-                <span>추억 담는 카메라 만들기</span>
-              </div>
-            </div>
-            <div class="kraft-box">
-              <div class="kraft-content">
-                <img src="img/spcialDay/kraft3.png" alt="졸업 사탕 트로피 만들기">
-              </div>
-              <div class="kraft-content-title">
-                <span>크래프트</span>
-                <span>졸업 사탕 트로피 만들기</span>
-              </div>
-            </div>
+            </a>
           </div>
         </div>
         <div class = "special-wrap">
@@ -1068,24 +1082,28 @@
             <button class="more special-more">특별한 날 더 보러가기</button>
           </div>
           <div class="special-box-wrap">
-            <div class="special-box">
-              <div class="special-content">
-                <img src="img/spcialDay/special-day1.png" alt="세계 물의 날(3/22)">
+            <a href="#">
+              <div class="special-box">
+                <div class="special-content">
+                  <img src="img/spcialDay/special-day1.png" alt="세계 물의 날(3/22)">
+                </div>
+                <div class="special-content-title">
+                  <span>특별의 날</span>
+                  <span>세계 물의 날(3/22)</span>
+                </div>
               </div>
-              <div class="special-content-title">
-                <span>특별의 날</span>
-                <span>세계 물의 날(3/22)</span>
+            </a>
+            <a href="#">
+              <div class="special-box">
+                <div class="special-content">
+                  <img src="img/spcialDay/special-day2.png" alt="경침(3/5)">
+                </div>
+                <div class="special-content-title">
+                  <span>절기</span>
+                  <span>경침(3/5)</span>
+                </div>
               </div>
-            </div>
-            <div class="special-box">
-              <div class="special-content">
-                <img src="img/spcialDay/special-day2.png" alt="경침(3/5)">
-              </div>
-              <div class="special-content-title">
-                <span>절기</span>
-                <span>경침(3/5)</span>
-              </div>
-            </div>
+            </a>
           </div>
         </div>
       </div>
@@ -1097,21 +1115,27 @@
           <button class="more notice-more">더 많은 소식 보러가기</button>
         </div>
         <div class="notice-box-wrap">
-          <div class="notice-box">
-            <span class="notice-bottom-news">News</span>
-            <span class="notice-title">설 연휴 고객센터 휴무 안내</span>
-            <span class="notice-date">2024.02.08</span>
-          </div>
-          <div class="notice-box">
-            <span class="notice-bottom-news">News</span>
-            <span class="notice-title">로렌차일드 전시 댓글 이벤트</span>
-            <span class="notice-date">2024.02.06</span>
-          </div>
-          <div class="notice-box">
-            <span class="notice-bottom-news">News</span>
-            <span class="notice-title">졸업식 이행시 이벤트</span>
-            <span class="notice-date">2024.02.01</span>
-          </div>
+          <a href="#">
+            <div class="notice-box">
+              <span class="notice-bottom-news">News</span>
+              <span class="notice-title">설 연휴 고객센터 휴무 안내</span>
+              <span class="notice-date">2024.02.08</span>
+            </div>
+          </a>
+          <a href="#">
+            <div class="notice-box">
+              <span class="notice-bottom-news">News</span>
+              <span class="notice-title">로렌차일드 전시 댓글 이벤트</span>
+              <span class="notice-date">2024.02.06</span>
+            </div>
+          </a>
+          <a href="#">
+            <div class="notice-box">
+              <span class="notice-bottom-news">News</span>
+              <span class="notice-title">졸업식 이행시 이벤트</span>
+              <span class="notice-date">2024.02.01</span>
+            </div>
+          </a>
         </div>
       </div>
     </section>
@@ -1261,13 +1285,6 @@
         </div> -->
     </footer>
   </div>
-  <!--
-    
-
-  </script>-->
-  
-  </script>
-
   <script src="js/swiper.js"></script>
   <script src="js/weather.js"></script>
   <script src="js/bookmark.js"></script>
