--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
         <!-- <div class="my_menu_set_btn"><a href="#">저장</a></div> -->
       </div>
       <div class="bookmark1 bookPos">
-          <div class="blobs">
+          <div class="blobs1 blobs">
             <svg width="371" height="374" viewBox="0 0 371 374" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd" d="M263.867 42.3768C306.109 68.4367 352.327 95.1926 365.526 143.372C379.628 194.847 365.683 252.152 333.084 295.037C301.723 336.294 250.091 351.082 199.722 361.489C148.351 372.104 90.5913 385.143 49.1315 353.706C8.47315 322.877 8.93747 263.99 3.60062 212.781C-1.21004 166.62 -4.4062 118.97 20.5519 79.4723C46.4278 38.5223 89.1852 9.4281 136.672 2.18834C182.643 -4.82033 224.578 18.1389 263.867 42.3768Z" fill="#CDE4B2"/>
             </svg>
@@ -677,7 +677,7 @@
           </div>
       </div>
       <div class="bookmark2 bookPos">
-        <div class="blobs">
+        <div class="blobs2 blobs">
           <svg width="371" height="374" viewBox="0 0 371 374" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" clip-rule="evenodd" d="M264.01 42.3768C306.253 68.4367 352.47 95.1926 365.669 143.372C379.771 194.847 365.827 252.152 333.228 295.037C301.866 336.294 250.235 351.082 199.866 361.489C148.495 372.104 90.7349 385.143 49.2751 353.706C8.6167 322.877 9.08102 263.99 3.74417 212.781C-1.06649 166.62 -4.26264 118.97 20.6955 79.4723C46.5714 38.5223 89.3287 9.42811 136.815 2.18834C182.786 -4.82033 224.721 18.1389 264.01 42.3768Z" fill="#B8DAFA"/>
           </svg>
@@ -704,7 +704,7 @@
         </div>
       </div>
       <div class="bookmark3 bookPos">
-        <div class="blobs">
+        <div class="blobs3 blobs">
           <svg width="371" height="374" viewBox="0 0 371 374" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path fill-rule="evenodd" clip-rule="evenodd" d="M263.9 41.9647C306.142 68.0246 352.36 94.7805 365.559 142.96C379.661 194.435 365.717 251.74 333.117 294.625C301.756 335.882 250.124 350.67 199.755 361.077C148.384 371.691 90.6245 384.731 49.1647 353.294C8.50635 322.465 8.97067 263.578 3.63382 212.369C-1.17684 166.208 -4.373 118.558 20.5851 79.0602C46.461 38.1102 89.2184 9.01599 136.705 1.77623C182.676 -5.23244 224.611 17.7268 263.9 41.9647Z" fill="#F5E8B9"/>
           </svg>
