--- a/index.html
+++ b/index.html
@@ -883,11 +883,19 @@
       <div>
         <a href="#">
           <img src="img/ad/어린이날.png" alt="어린이날 선물">
+          <div class="ad2-title">
+            <span>어린이날 선물</span>
+            <span>체험단모집</span>
+          </div>
         </a>
       </div>
       <div>
         <a href="#">
           <img src="img/ad/설렘가득.png" alt="설렘가득">
+          <div class="ad2-title">
+            <span>설렘가득</span>
+            <span>신학기준비</span>
+          </div>
         </a>
       </div>
     </div>
@@ -1256,10 +1264,10 @@
       </div>
     </section>
     <footer id="footer">
-        <div class="footer-company ">
-          <div class="footer-company-area">
-            <div class="footer-company">
-              <ul class="">
+        <div class="footer-company">
+          <div class="footer-company-area clearfix">
+            <div class="fleft footer-company">
+              <ul class="footer-info-t clearfix">
                 <li><a href="#">회사소개</a></li>
                 <li><a href="#">홍보센터</a></li>
                 <li><a href="#">이용약관</a></li>
@@ -1270,13 +1278,13 @@
                 <li><a href="#"><b>서비스 전체보기</b></a></li>
               </ul>
               <div class="footer-company-add">
-                <ul class="">
+                <ul class="footer-info-m clearfix">
                   <li>이케이 주식회사 대표이사 : 이희주</li>
                   <li>경기도 용인시 기흥구 기흥로 58 기흥ICT밸리 B동 29층</li>
                   <li>대표전화 : 02-5880-115</li>
                   <li>E-MAIL : KIDKIDS@KIDKIDS.NET</li>
                 </ul>
-                <ul class="">
+                <ul class="footer-info-b clearfix">
                   <li>사업자등록번호 : 214-86-51854</li>
                   <li>통신판매업 신고 : 제 2021-용인기흥-2008호</li>
                   <li>직업제공사업 신고 : 서울청 제2012-29호</li>
@@ -1284,13 +1292,59 @@
                 </ul>
               </div>
             </div>
+            <div class="fright footer-company-r">
+              <div class="selectbox">
+                <p class="title">FAMILY SITE<span><img src="img/footer/bottom.svg" alt="버튼 아래표시"></span></p>
+                <div class="info-container">
+                    <ul class="info">
+                        <li>어린이집 프랜차이즈 - 빅스맘</li>
+                        <li>유아교육전문지-월간유아</li>
+                        <li>고용환급-키드키즈평생교육원</li>
+                        <li>직장보육위탁-EK보육경영연구소</li>
+                        <li>스마트알림장-키드키즈 알림장</li>
+                        <li>캐릭터 애니메이션-티파하파</li>
+                        <li>영유아 홈스쿨링- 와글바글</li>
+                        <li>실버교육서비스-실버에듀넷</li>
+                        <li>몬테소리연구회-한국몬테소리협회</li>
+                        <li>중화권 포털서비스-leyojo</li>
+                        <li>베트남 포털서비스-키드키즈 VN</li>
+                        <li>키즈 & 실버 마케팅-이엔에드</li>
+                    </ul>
+                </div>
+              </div>
+              <ul class="offical_site">
+                <li><a href="http://pf.kakao.com/_ilIrM" target="_blank"><img src="img/footer/kakaoch.png" alt="키드키즈 카카오톡채널"></a></li>
+              <li><a href="https://www.youtube.com/user/kidkidsnet" target="_blank"><img src="img/footer/youtube.png" alt="키드키즈 공식 유튜브"></a></li>
+              <li><a href="http://post.naver.com/my.nhn?memberNo=414791" target="_blank"><img src="img/footer/poster.png" alt="키드키즈 포스트"></a></li>
+              <li><a href="http://blog.naver.com/kidkidscorp" target="_blank"><img src="img/footer/blog.png" alt="키드키즈 공식 블로그"></a></li>
+              <li><a href="https://www.instagram.com/ek_kidkids/" target="_blank"><img src="img/footer/instagram.png" alt="키드키즈 인스타그램"></a></li>
+              <li><a href="https://www.facebook.com/ekkidkids" target="_blank"><img src="img/footer/facebook.png" alt="키드키즈 페이스북"></a>
+              </ul>
+            </div>
           </div>
+          
         </div> 
+        <div class="award">
+          <ul class="clearfix">
+            <li><a href="http://www.kidkids.net/event/isms_2018/index_1.html" target="_blank"><img src="img/footer/emblem01s.png" alt="KISA정보보호 관리체계인증"></a></li>
+            <li><a href="http://www.ekgroup.co.kr/story/pr_view.html?uid=942&amp;page=2" target="_blank"><img src="img/footer/emblem02s.png" alt="굿콘테츠 서비스인증"></a></li>
+            <li><a href="http://www.ekgroup.co.kr/story/pr_view.html?uid=1091&amp;page=1" target="_blank"><img src="img/footer/emblem03_2.png" alt="교육대상"></a></li>
+            <li><a href="http://www.ekgroup.co.kr/story/pr_view.html?uid=1012&amp;page=1" target="_blank"><img src="img/footer/emblem03.png" alt="디지털고객만족도 유아교육1위"></a></li>
+            <li><a href="http://www.ekgroup.co.kr/story/pr_view.html?uid=962&amp;page=1" target="_blank"><img src="img/footer/emblem04s.png" alt="대한민국 강소기업대상"></a></li>
+            <li><a href="http://www.ekgroup.co.kr/story/pr_view.html?uid=956&amp;page=2" target="_blank"><img src="img/footer/emblem05s.png" alt="국가경쟁력대상 교육부문 대상"></a></li>
+            <li><a href="http://www.ekgroup.co.kr/story/pr_view.html?uid=947&amp;page=1" target="_blank"><img src="img/footer/emblem06s.png" alt="일본이러닝어워드 글로벌부문 특별상"></a></li>
+            <li><a href="http://www.ekgroup.co.kr/story/pr_view.html?uid=884&amp;page=1" target="_blank"><img src="img/footer/emblem07s.png" alt="고객이 신뢰하는 브랜드대상 교육부문대상"></a></li>
+          </ul>
+      </div>
     </footer>
   </div>
+  <script>
+    
+    </script>
   <script src="js/swiper.js"></script>
   <script src="js/weather.js"></script>
   <script src="js/bookmark.js"></script>
   <script src="js/header.js"></script>
+  <script src="js/footer.js"></scripts>
 </body>
 </html>
