--- a/index.html
+++ b/index.html
@@ -1345,6 +1345,6 @@
   <script src="js/weather.js"></script>
   <script src="js/bookmark.js"></script>
   <script src="js/header.js"></script>
-  <script src="js/footer.js"></scripts>
+  <script src="js/footer.js"></script>
 </body>
 </html>
